Minor changes + added restart